02-workloads-networking/manifests/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-modulo02
  labels:
    app: app-modulo02
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app-modulo02
  template:
    metadata:
      labels:
        app: app-modulo02
    spec:
      containers:
        - name: nginx
          image: nginx:1.27-alpine
          volumeMounts:
            - name: html
              mountPath: /usr/share/nginx/html
          ports:
            - containerPort: 80
      volumes:
        - name: html
          configMap:
            name: app-html
---
apiVersion: v1
kind: Service
metadata:
  name: app-modulo02
spec:
  selector:
    app: app-modulo02
  ports:
    - port: 80
      targetPort: 80
